log
Sun 14 Aug 2022 01:35:30 AM UTC: 
 tests:  0|7
total_score: 0/70
43ca2c2
Sun 14 Aug 2022 01:43:25 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     c=a+b;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
79c7512
Sun 14 Aug 2022 01:43:59 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
111f23a
Sun 14 Aug 2022 01:57:38 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
65dd270
Sun 14 Aug 2022 01:59:26 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fbeb5fa
Sun 14 Aug 2022 01:59:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
19e9fb9
Sun 14 Aug 2022 02:00:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
b5a354d
Sun 14 Aug 2022 02:14:49 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 30/70
9b60fab
Sun 14 Aug 2022 02:21:29 AM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  4|3
total_score: 40/70
4a682ca
Sun 14 Aug 2022 02:26:27 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 50/70
1407f56
Sun 14 Aug 2022 02:33:16 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:115:10: error: ‘i’ undeclared (first use in this function)
  115 | c->datos[i]=a->datos[i]+b->datos[i];
      |          ^
exercises.c:115:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2e8f956
Sun 14 Aug 2022 02:33:41 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:115:18: error: invalid operands to binary + (have ‘int *’ and ‘int *’)
  115 | c->datos=a->datos+b->datos;
      |          ~~~~~~~~^~~~~~~~~
      |           |        |
      |           int *    int *
Compilation failed
aa44111
Sun 14 Aug 2022 02:34:50 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:115:4: error: invalid operands to binary + (have ‘Vector *’ and ‘Vector *’)
  115 | c=a+b;
      |    ^
Compilation failed
b10bd31
Sun 14 Aug 2022 02:35:06 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:115:11: error: invalid operands to binary + (have ‘Vector *’ and ‘Vector *’)
  115 | c->datos=a+b;
      |           ^
Compilation failed
a6f70cc
Sun 14 Aug 2022 03:12:07 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:115:6: error: wrong type argument to unary plus
  115 | *c=a*+b*;
      |      ^
exercises.c:115:9: error: expected expression before ‘;’ token
  115 | *c=a*+b*;
      |         ^
Compilation failed
c63b205
Sun 14 Aug 2022 03:13:24 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
ca6d904
Sun 14 Aug 2022 03:14:34 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:115:18: error: invalid operands to binary + (have ‘int *’ and ‘int *’)
  115 | c->datos=a->datos+b->datos;
      |          ~~~~~~~~^~~~~~~~~
      |           |        |
      |           int *    int *
Compilation failed
496d5b7
